# AmazonAnalyzer

./: .env  .gitignore  pyproject.toml  requirement.txt
main/: data.json  main.py  requirements.txt
src/: llm.py
